syntax = "proto3";

option go_package = "UserService/services";

package userService;

message Empty {

}

//UserRequestID requests a user by his id
message UserRequestId {
    uint64 id = 1;
}

//UserRequestEmail requests a user by his email
message UserRequestEmail {
    string email = 1;
}

message User {
    uint64  id = 1;
    int64  created_at_unix = 2;
    int64  updated_at_unix = 3;
    string email = 4;
    bytes  public_key = 5;
    bytes  wrapped_private_key = 6;
    bytes  wrapped_master_key = 7;
}

message UserRequestCreate {
    string email = 4;
    bytes  public_key = 5;
    bytes  wrapped_private_key = 6;
    bytes  wrapped_master_key = 7;
}

message UserPk {
    uint64 id = 1;
    string email = 2;
    bytes  public_key = 3;
}


service UserService {
    rpc GetUserById(UserRequestId) returns (User) {}
    rpc GetUserByEmail(UserRequestEmail) returns (User) {}
    rpc CreateUser(UserRequestCreate) returns (User) {}
    rpc DeleteUserById(UserRequestId) returns (Empty) {}
    rpc DeleteUserByEmail(UserRequestEmail) returns (Empty) {}
    rpc GetUserPkById(UserRequestId) returns (UserPk) {}
    rpc GetUserPkByEmail(UserRequestEmail) returns (UserPk) {}
}


